@@ -1,3 +1,8 @@
+Sun Jan 31 18:33:55 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* netfs.c (netfs_attempt_utimes): Implement new possibility that
+	ATIME or MTIME might be null.
+
 1998-10-20  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* ftpfs.c (netfs_append_args): Add braces to silence gcc warning.
